--- a/modal.html
+++ b/modal.html
@@ -8,18 +8,22 @@
 <body>
     <h1>Modal</h1>
 <!-- this is the modal code for copy/paste-->
-    <section class="modal hidden">
-        <div class="flex">
-          <img src="user.png" width="50px" height="50px" alt="user" />
-          <button class="btn-close">⨉</button>
-        </div>
-        <div>
-          <h3>Stay in touch</h3>
-          <p>
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
-          </p>
-        </div>
+<div class="modal">
+  <div class="modal-background"></div>
+  <div class="modal-card">
+    <header class="modal-card-head">
+      <p class="modal-card-title">Modal title</p>
+      <button class="delete" aria-label="close"></button>
+    </header>
+    <section class="modal-card-body">
+      <!-- Content ... -->
+    </section>
+    <footer class="modal-card-foot">
+      <button class="button is-success">Save changes</button>
+      <button class="button">Cancel</button>
+    </footer>
+  </div>
+</div>
     <!-- this is the end-->
 
 </body>
