--- a/index.html
+++ b/index.html
@@ -9,6 +9,44 @@
 </head>
 <body>
     
+    <header>
+        <nav class="nav">
+            <a href="#"><img src="" alt="">Link1</a>
+            <ul class="list">
+                <li><a href="#">Link2</a></li>
+                <li><a href="#">Link3</a></li>
+                <li><a>Link4</a></li>
+                <li><a>Link5</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>dolor sit amet</h1>
+            <div class="navbar"></div>
+        
+        <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+        <h2>Search Results:</h2>
+            <div id="searchResults"></div>
+
+            <div class="modal">
+                <div class="modal-background"></div>
+                <div class="modal-card">
+                  <header class="modal-card-head">
+                    <p class="modal-card-title">Modal title</p>
+                    <button class="delete" aria-label="close"></button>
+                  </header>
+                  <section class="modal-card-body">
+                    <!-- Content ... -->
+                  </section>
+                  <footer class="modal-card-foot">
+                    <button class="button is-success">Save changes</button>
+                    <button class="button">Cancel</button>
+                  </footer>
+                </div>
+              </div>
+
+    </main>
     <script src="./assets/script.js"></script>
 </body>
 </html>
