added placeholder h2 in the modal

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <button class="delete" aria-label="close"></button>
                   </header>
                   <section class="modal-card-body">
+                    <h2>placeholder</h2>
                     <!-- Content ... -->
                   </section>
                   <footer class="modal-card-foot">
