added basic css style

--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
     </header>
     <main>
         <h1>dolor sit amet</h1>
+        <div class="columns">
+            <div class="column">
+              First column
+            </div>
+            <div class="column">
+              Second column
+            </div>
+            <div class="column">
+              Third column
+            </div>
+            <div class="column">
+              Fourth column
+            </div>
+          </div>
         
         <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
