--- a/index.html
+++ b/index.html
@@ -59,7 +59,27 @@
                   </footer>
                 </div>
               </div>
-
+              <footer>
+                <div >
+                    <section>
+                        <div>
+                            <h2>Placeholder</h2>
+                        </div>
+                        <div>
+                            <ul>
+                                <li><a href="#"><a href="#">Placeholder</a></a></li>
+                                <li><a href="#">Placeholder</a></li>
+                                <li><a href="#">Placeholder</a></li>
+                                <li><a href="#">Placeholder</a></li>
+                            </ul>
+                        </div>
+                    </section>   
+                    <div>
+                        <img src="./assets/bart.jpg" alt="">
+                        <p>Copyright 2024 Projec Bart</p>
+                    </div>
+                </div>
+            </footer>
     </main>
     <script src="./assets/script.js"></script>
 </body>
