deleted the second choice navbar and updated the footer

--- a/assets/footer.html
+++ b/assets/footer.html
@@ -69,7 +69,7 @@
 </div>
 
 
-<nav class="pagination" role="navigation" aria-label="pagination">
+<!-- <nav class="pagination" role="navigation" aria-label="pagination">
     <a class="pagination-previous">Previous</a>
     <a class="pagination-next">Next page</a>
     <ul class="pagination-list">
@@ -95,7 +95,7 @@
             <a class="pagination-link" aria-label="Goto page 86">86</a>
         </li>
     </ul>
-</nav>
+</nav> -->
 
 
 
