added social media icons and cleaned redundant codes from navbar and footer and add sytles to the images

--- a/assets/footer.html
+++ b/assets/footer.html
@@ -13,7 +13,7 @@
 
 <!-- copy this section below -->
 
-<article class="panel is-primary">
+<!-- <article class="panel is-primary">
     <p class="panel-heading">
         Primary
     </p>
@@ -56,15 +56,15 @@
         </span>
         jgthms.github.io
     </a>
-</article>
+</article> -->
 
 
 <div class="card">
     <footer class="card-footer">
-        <a href="#" class="card-footer-item">youtube Icon</a>
-        <a href="#" class="card-footer-item">Twiter Icon</a>
-        <a href="#" class="card-footer-item">FaceIcont</a>
-        <a href="#" class="card-footer-item">FaceIcont</a>
+        <a href="https://www.youtube.com" class="card-footer-item"><img src="../assets/yutube.png"></a>
+        <a href="https://twitter.com/" class="card-footer-item"><img src="../assets/twitter.png"></a>
+        <a href="https://www.facebook.com/" class="card-footer-item"><img src="../assets/facebook.png"></a>
+        <a href="https://www.instagram.com/" class="card-footer-item"><img src="../assets/instagram.png"></a>
     </footer>
 </div>
 
