--- a/assets/navbar.html
+++ b/assets/navbar.html
@@ -48,7 +48,7 @@
                         <a class="navbar-item">
                             Jobs
                         </a>
-                        <a class="navbar-item">
+                        <a class="navbar-item" href="./form.html">
                             Contact
                         </a>
                         <hr class="navbar-divider">
@@ -73,7 +73,7 @@
             <div class="navbar-end">
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a class="button is-primary">
+                        <a class="button is-primary" href="./signup.html">
                             <strong>Sign up</strong>
                         </a>
                         <a class="button is-light">
