--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <header>
         <nav class="nav">
-            <a href="#"><img src="" alt="">Link1</a>
+            <a href="#"><img src="" alt="">hello world!</a>
             <ul class="list">
                 <li><a href="#">Link2</a></li>
                 <li><a href="#">Link3</a></li>
