edited index.html down

--- a/index.html
+++ b/index.html
@@ -10,37 +10,22 @@
 <body>
     
     <header>
-        <nav class="nav">
-            <a href="#"><img src="" alt="">hello world!</a>
-            <ul class="list">
-                <li><a href="#">Link2</a></li>
-                <li><a href="#">Link3</a></li>
-                <li><a>Link4</a></li>
-                <li><a>Link5</a></li>
-            </ul>
-        </nav>
+      <h1>Vote which is cuter!</h1>
     </header>
     <main>
-        <h1>dolor sit amet</h1>
         <div class="columns">
             <div class="column">
               First column
+              <img src="./assets/facebook.png" alt="Picture of Cat">
             </div>
             <div class="column">
               Second column
-            </div>
-            <div class="column">
-              Third column
-            </div>
-            <div class="column">
-              Fourth column
+              <img src="./assets/twitter.png" alt="Picture of Dog">
             </div>
           </div>
         
         <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-        <h2>Search Results:</h2>
-            <div id="searchResults"></div>
 
             <div class="modal">
                 <div class="modal-background"></div>
@@ -60,23 +45,11 @@
                 </div>
               </div>
               <footer>
-                <div >
-                    <section>
-                        <div>
-                            <h2>Placeholder</h2>
-                        </div>
-                        <div>
-                            <ul>
-                                <li><a href="#"><a href="#">Placeholder</a></a></li>
-                                <li><a href="#">Placeholder</a></li>
-                                <li><a href="#">Placeholder</a></li>
-                                <li><a href="#">Placeholder</a></li>
-                            </ul>
-                        </div>
-                    </section>   
-                    <div>
-                        <img src="./assets/bart.jpg" alt="">
-                        <p>Copyright 2024 Projec Bart</p>
+
+                <!-- This is where the footer is-->
+
+
+                        <p>Copyright 2024 Cute or Not</p>
                     </div>
                 </div>
             </footer>
