--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
 <body>
     <!-- Use nav bar? Build contatiner to center text-->
     <header>
-      <h1>Vote which is cuter!</h1>
-    </header>
+      <div class="content">
+        <h1 style="font-size:8vw">Vote which is cuter!</h1>
+        <h3><strong>Select an <em>image</em> to decide who is the cutest!</strong></h3>
+    </div>
+      </header>
 
 <!-- put two options to vote for -->
 <!-- get id for dog/cat images, set up image buttons-->
     <main>
-        <div class="columns">
+
+      
+        <div class="columns" class="content">
             <div class="column">
               CAT
               <img src="./assets/facebook.png" alt="Picture of Cat">
