added functions to render winners and store them in local storage

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
       <section class="modal-card-body">
 
         <figure class="image is-128x128">
-          <img src="./assets/twitter.png" alt="image of the selected dog or cat" class="mb-2">
+          <img src="" id="winner-cat" />
+          <img src="" id="winner-dog" />
         </figure>
         <input class="input is-normal" type="text" class="mt-3 mb-3 p-2" disabled
           placeholder="Click the radio button below to switch theme">
