function to replace default winner picture

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="columns has-text-centered">
           <div class="column ui-widget-content" id="winner">
             <h3 class="title is-2 has-text-success">The last winner was :</h3>
-            <img src="./assets/corgi.jpg" alt="image of the last winner">
+            <img src="./assets/corgi.jpg" id="last-winner" alt="image of the last winner">
           </div>
         </div>
 
